<resources>
    <string name="app_name">Spacetime</string>
    <string name="index">首页</string>
    <string name="include">导入</string>
    <string name="todo">待办</string>
    <string name="me">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="APIKEY">sk-bd7a36da81b74033a786934763bf4856</string>

    <!--弹出菜单选项-->
    <string name="rename">重命名</string>
    <string name="delete">删除</string>

    <!--确认对话框-->
    <string name="delete_warn">确定要删除吗？</string>
    <string name="delete_confirm">删除</string>

    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="create">新建</string>

    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>

    <string name="selectAll">全选</string>
    <string name="copy">复制</string>
    <string name="cut">剪切</string>
    <string name="paste">粘贴</string>
    <string name="expand">扩写</string>
    <string name="abbreviate">缩写</string>
    <string name="translate">翻译</string>
    <string name="segment">分段</string>

    <string name="replace">替换</string>
    <string name="insert">插入</string>

    <string name="editTitle">编辑标题</string>

    <string name="modelList">模型列表</string>

    <string name="depth_use_explanation" translatable="false">When Depth is enabled on supported devices, virtual objects adapt to the environment by blending in with the real world.</string>
    <string name="button_text_enable_depth" translatable="false">Enable</string>
    <string name="button_text_disable_depth" translatable="false">Disable</string>
    <string name="options_title_with_depth" translatable="false">Your device supports depth</string>
    <string name="options_title_without_depth" translatable="false">Your device does not support depth</string>
    <string name="done" translatable="false">Done</string>
    <string-array name="depth_options_array" translatable="false">
        <item>Enable depth</item>
        <item>Show depth map</item>
    </string-array>
    <string name="options_title_instant_placement" translatable="false">Instant Placement options</string>
    <string name="forgetPasswd">忘记密码</string>
    <string-array name="instant_placement_options_array" translatable="false">
        <item>Enable Instant Placement</item>
    </string-array>
</resources>