<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_popup_menu"
    android:padding="25dp"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:id="@+id/tv_confirm_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_warn"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/black"
        android:textSize="21sp"/>
    <TextView
        android:id="@+id/btn_confirm"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/xui_config_color_red"
        android:background="@drawable/shape_red_border"
        android:text="@string/delete_confirm"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:textColor="@color/black"
        android:text="@string/cancel"
        android:textSize="18sp"/>
</LinearLayout>