<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_popup_menu"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingTop="25dp"
    android:paddingEnd="25dp"
    android:paddingStart="25dp"
    android:paddingBottom="15dp">
    <TextView
        android:id="@+id/tv_input_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        android:text="@string/rename"/>
    <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
        android:id="@+id/edit_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:met_baseColor="@color/main_theme"
        app:met_clearButton="true"
        android:textSize="18sp"
        app:met_underlineColor="@color/dark_yellow" />
    <TextView
        android:id="@+id/btn_confirm_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/confirm"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/sub_theme_dark"
        android:background="@drawable/shape_border_sub_theme"
        android:backgroundTint="@color/sub_theme_dark"/>
    <TextView
        android:id="@+id/btn_cancel_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="18sp"/>
</LinearLayout>