<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/logo"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="10dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="50dp"
        app:cardCornerRadius="10dp">

        <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
            android:id="@+id/edit_username"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            app:met_hideUnderline="true"
            app:met_floatingLabel="none"
            android:textSize="20sp"
            android:hint="用户名" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        app:cardCornerRadius="10dp">

        <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
            android:id="@+id/edit_password"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            app:met_hideUnderline="true"
            app:met_floatingLabel="none"
            android:textSize="20sp"
            android:hint="密码" />

        <ImageButton
            android:id="@+id/preview"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="end|center"
            android:src="@drawable/preview_open"/>

    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetPasswd"
            android:textSize="15sp"
            android:layout_gravity="left|center_vertical"
            android:layout_marginEnd="15dp"
            tools:ignore="RtlHardcoded" />

        <CheckBox
            android:id="@+id/ckBox_autoLogin"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:theme="@style/MyCheckboxStyle"
            android:background="@color/transparent"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="自动登录"
            android:textSize="15sp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginEnd="15dp"
            tools:ignore="RtlHardcoded" />
        <CheckBox
            android:id="@+id/ckBox_rememberPasswd"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:theme="@style/MyCheckboxStyle"
            android:background="@color/transparent"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="记住密码"
            android:textSize="15sp"
            android:layout_gravity="right|center_vertical"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="130dp"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/login"
            android:textSize="24sp"
            android:layout_gravity="start"
            android:background="@drawable/selector_main_theme_btn"/>


        <Button
            android:id="@+id/btn_register"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="24sp"
            android:padding="10dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/selector_main_theme_btn"/>

    </LinearLayout>


    <Button
        android:id="@+id/btn_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:text="调试"
        android:textSize="24sp"
        android:background="@drawable/selector_main_theme_btn"
        android:visibility="gone"
        />

</LinearLayout>